@startuml Diagrama de Banco de Dados - ManageMaster

!define PK_COLOR #FFD700
!define FK_COLOR #87CEEB

skinparam linetype ortho
skinparam packageStyle rectangle

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(50)
  * username : VARCHAR(50) <<UNIQUE>>
  * password : VARCHAR(255)
}

entity "categoria" as categoria {
  * id : BIGINT <<PK>>
  --
  nome : VARCHAR
}

entity "fornecedor" as fornecedor {
  * id : BIGINT <<PK>>
  --
  * nome : VARCHAR
  email : VARCHAR
  * telefone : VARCHAR
}

entity "produtos" as produtos {
  * id : BIGINT <<PK>>
  --
  * nome : VARCHAR
  marca : VARCHAR
  * preco : DECIMAL(10,2)
  * quantidade : INTEGER
  validade : DATE
  categoria_id : BIGINT <<FK>>
}

entity "transacao" as transacao {
  * id : BIGINT <<PK>>
  --
  tipo : VARCHAR <<Discriminator>>
  * data_transacao : DATE
  * usuario : VARCHAR
}

entity "venda" as venda {
  * id : BIGINT <<PK>>
  --
  * fornecedor_id : BIGINT <<FK>>
  * forma_pagamento : VARCHAR
  * status : VARCHAR
  * numero_documento : VARCHAR
}

entity "compra" as compra {
  * id : BIGINT <<PK>>
  --
  * fornecedor_id : BIGINT <<FK>>
  * forma_pagamento : VARCHAR
  * status : VARCHAR
  * numero_documento : VARCHAR
  * valor_total : DECIMAL(10,2)
}

entity "item_transacao" as item_transacao {
  * id : BIGINT <<PK>>
  --
  * produto_id : BIGINT <<FK>>
  * quantidade : INTEGER
  * preco : DECIMAL(10,2)
  * transacao_id : BIGINT <<FK>>
}

entity "movimentacoes_financeiras" as movimentacoes_financeiras {
  * id : BIGINT <<PK>>
  --
  * valor : DECIMAL(10,2)
  * data : DATE
  * tipo : VARCHAR
  * origem : VARCHAR
}

' Relacionamentos
produtos }o--|| categoria : "pertence a"
venda }o--|| fornecedor : "tem"
compra }o--|| fornecedor : "tem"
venda --|| transacao : "extends"
compra --|| transacao : "extends"
item_transacao }o--|| produtos : "contém"
item_transacao }o--|| transacao : "pertence a"

note right of transacao
  Tabela abstrata usando
  InheritanceType.JOINED
  Discriminator: tipo
end note

note right of venda
  DiscriminatorValue: "VENDA"
end note

note right of compra
  DiscriminatorValue: "COMPRA"
end note

@enduml
